make parallel memory sharing more efficient